--- a/style.css
+++ b/style.css
@@ -1,111 +1,48 @@
-* {
-    box-sizing: border-box;
-    /*padding: 0px;*/
-    /*margin: 0px;*/
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-.column {
-    float: left;
-    width: 50%;
-    padding: 10px;
+.hero{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background: #f6f6f6;
 }
 
-.container {
-    font-family: "Arial Black";
-    font-weight: bold;
-    font-size: 50px;
+nav{
+    display: flex;
+    width: 84%;
+    margin: auto;
+    padding: 20px 0;
     align-items: center;
-    text-align: center;
-    float: left;
-    margin-top: 50px;
-    margin-left: 20%;
+    justify-content: space-between;
 }
 
-.logo{
-    box: 5px 5px;
-}
-
-
-h1 {
-    font-style: italic;
-    font-weight: bolder;
-    color: black;
-    font-family: "Arial Black";
-    font-size: 60px;
-    margin: 15px;
-}
-
-h2 {
-    font-style: italic;
-    font-weight: normal;
-    color: black;
-    font-family: "Century Gothic";
-    font-size: 30px;
-    margin: 0px;
-}
-
-a:link {
-    color: black;
-}
-
-a:hover {
-    color: #4267b2;
-}
-
-footer {
-    position: absolute;
-    bottom:0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    width: 100%;
-    background-color: black;
-    color: #4267b2;
-    font-family: "Century Gothic";
-    text-align: center;
-}
-
-.navbar{
-    position: fixed;
-    height: 100px;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: black;
-}
-
-.navbar .logo{
-    box-shadow: 5px 5px 3px #232222;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: 10px;
-    margin-top: 50px;
-}
-
-.navbar ul{
-    float: right;
-    margin-right: 20px;
-}
-.navbar ul li{
-    list-style: none;
-    margin: 0 8px;
+nav ul li{
     display: inline-block;
-    line-height: 80px;
+    list-style: none;
+    margin: 10px 20px;
 }
-.navbar ul li a{
-    font-size: 20px;
-    font-family: "Century Gothic";
-    color: #4267b2;
-    padding: 6px 13px;
+
+nav ul li a{
     text-decoration: none;
-    transition: .4s;
-}
-.navbar ul li a.active,
-.navbar ul li a:hover{
-    background: #181818;
-    padding: 40px;
+    color: black;
+    font-weight: bold;
 }
 
+nav ul li a:hover{
+    color: blue;
+}
 
+.content{
+    margin-left: 8%;
+    margin-top: 15%;
+}
 
+.content h1{
+    font-size: 50px;
+    color: black;
+    margin-bottom: 20px;
+}
