--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: CHAWP;
+}
+html{
+    scroll-behavior: smooth;
 }
 
 .hero{
     position: relative;
     height: 100vh;
     width: 100%;
-    background: #f6f6f6;
+    background: #324575;
 }
 
 nav{
@@ -28,21 +31,94 @@ nav ul li{
 
 nav ul li a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
 nav ul li a:hover{
-    color: blue;
+    color: darkorange;
+    font-style: italic;
 }
 
 .content{
     margin-left: 8%;
-    margin-top: 15%;
+    margin-top: 13%;
 }
 
 .content h1{
     font-size: 50px;
-    color: black;
+    color: white;
     margin-bottom: 20px;
+}
+
+span{
+    color: #9e9e9e;
+}
+span:hover{
+    color:darkorange;
+    font-style:italic;
+}
+
+.content p{
+    color: #ffffff;
+    line-height: 22px;
+}
+
+.content a{
+    background: black;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    display: inline-block;
+    margin: 30px 0;
+    border-radius: 5px;
+}
+
+.content a:hover{
+    background: darkorange;
+    color: white;
+}
+
+
+.pics me{
+    height: 100%;
+    position: absolute;
+    right: 100%;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: bottom 1s, left 1s;
+}
+
+.pics me:hover{
+    left: 45%;
+}
+
+#home{
+    height: 100vh;
+    background: #324575;
+    display: inline-block;
+    width: 100%;
+}
+
+#work{
+    height: 100vh;
+    background: white;
+    display: inline-block;
+    width: 100%;
+}
+
+#about{
+    height: 100vh;
+    background: #324575;
+    display: inline-block;
+    width: 100%;
+}
+
+#cont{
+    height: 100vh;
+    background: white;
+    display: inline-block;
+    width: 100%;
 }
