html and css fix Added js for autoplay video uploaded some works(png and mp4)

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ span:hover{
 
 #cont{
     height: 100vh;
-    background: white;
+    background: #324575;
     display: inline-block;
     max-width: 100%;
 }
