--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ h2{
     text-align: center;
 }
 
-.proj1, .proj1a, .proj2, .proj3, .proj4{
+.proj1, .proj1a, .proj2,
+.proj3, .proj4{
     max-width: 100%;
     max-height: 100%;
     width: 500px;
@@ -141,6 +142,11 @@ h2{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+}
+
+.proj1:hover, .proj1a:hover,
+.proj2:hover, .proj3:hover{
+    transform: scale(1.2);
 }
 
 #work p{
@@ -155,6 +161,13 @@ h2{
     display: inline-block;
     width: 100%;
 }
+
+#cont h2{
+    font-size: 50px;
+    color: white;
+    margin-bottom: 20px;
+}
+
 
 /*ABOUT PART*/
 #about{
