--- a/style.css
+++ b/style.css
@@ -201,18 +201,91 @@ h2{
     width: 100%;
 }
 
+#likes ul a{
+    text-decoration: none;
+}
+
+#likes ul li{
+    padding: 10px 18px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    display:block;
+    margin: 30px 0;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+#likes ul li:hover{
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: darkorange;
+}
+
+
 #lrn{
-    height: 100vh;
+    height: 50vh;
     background: #324575;
     display: inline-block;
     width: 100%;
 }
 
+#lrn ul a{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+#lrn ul li{
+    padding: 10px 18px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    display:block;
+    margin: 30px 0;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+#lrn ul li:hover{
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: darkorange;
+}
+
+
 #recog{
-    height: 100vh;
+    height: 50vh;
     background: white;
     display: inline-block;
     width: 100%;
-
 }
+
+#recog ul a{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+#recog ul li{
+    padding: 10px 18px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: black;
+    display:block;
+    margin: 30px 0;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+#recog ul li:hover{
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    color: darkorange;
+}
+
 /*end of about*/
