--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: CHAWP;
+    font-family: Serif;
 }
 html{
     scroll-behavior: smooth;
@@ -75,6 +75,7 @@ nav ul li a:hover{
 
 span{
     color: #9e9e9e;
+    font-family: CHAWP;
 }
 
 span:hover{
