--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Serif;
+    font-family: "Comic Sans MS";
 }
 html{
     scroll-behavior: smooth;
