--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Comic Sans MS";
+    font-family: "Open Sans";
 }
 html{
     scroll-behavior: smooth;
+    background: #E6E6E6;
 }
 
 /*HOME PART*/
 #home{
-    height: 55vh;
-    background: #324575;
+    height: 30vh;
     display: inline-block;
     max-width: 100%;
 }
@@ -18,22 +18,15 @@ html{
     position: relative;
     max-width: 100%;
     height: 100vh;
-    background: #324575;
-    position: relative;
-}
-hr{
-    height: 1%;
-    background: black;
-    border: none;
-    margin: auto;
-    width: 90%;
 }
 
-nav{
+
+.navbar{
+    background: #E6E6E6;
+    position: fixed;
     display: flex;
-    max-width: 84%;
-    margin: auto;
-    padding: 20px 0;
+    height: 100px;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
 }
@@ -41,6 +34,8 @@ nav{
 .logo{
     max-width: 100px;
     cursor: pointer;
+    padding-left: 50px;
+    padding-top: 30px;
 }
 
 
@@ -52,57 +47,48 @@ nav ul li {
 
 nav ul li a{
     text-decoration: none;
-    color: white;
-    font-weight: bold;
+    color: black;
 }
 
 nav ul li a:hover{
-    color: darkorange;
-    font-style: italic;
+    color: #324575 ;
 }
 
 .content{
-    margin-left: 8%;
-    margin-top: 15%;
+    margin-left: 10%;
+    margin-top: 30%;
 }
 
 
 .content h1{
-    font-size: 50px;
-    color: white;
+    font-size: 60px;
+    font-weight: bold;
+    color: black;
     margin-bottom: 20px;
 }
 
-span{
-    color: #9e9e9e;
-    font-family: CHAWP;
-}
-
-span:hover{
-    color:darkorange;
-    font-style:italic;
-}
 
 .content p{
-    color: white;
+    color: black;
     line-height: 22px;
+    font-size: 22px;
 }
 
-.content a{
-    background: black;
-    padding: 10px 18px;
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
-    display: inline-block;
-    margin: 30px 0;
-    border-radius: 5px;
-}
+/*.content a{*/
+/*    background: black;*/
+/*    padding: 10px 18px;*/
+/*    text-decoration: none;*/
+/*    font-weight: bold;*/
+/*    color: white;*/
+/*    display: inline-block;*/
+/*    margin: 30px 0;*/
+/*    border-radius: 5px;*/
+/*}*/
 
-.content a:hover{
-    background: darkorange;
-    color: white;
-}
+/*.content a:hover{*/
+/*    background: darkorange;*/
+/*    color: white;*/
+/*}*/
 
  p{
     color: black;
@@ -111,7 +97,7 @@ span:hover{
 
 .pics{
     max-width: 80%;
-    height: 48vh;
+    height: 60vh;
     position: absolute;
     bottom: 0;
     right: 100px;
@@ -121,9 +107,24 @@ span:hover{
 /*WORK PART*/
 #work{
     height: 100vh;
-    background: white;
     display: inline-block;
     width: 100%;
+}
+
+#work a{
+    background: black;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #E6E6E6;
+    display: inline-block;
+    margin: 30px 0;
+    border-radius: 5px;
+}
+
+#work a:hover{
+    background: darkorange;
+    color: white;
 }
 
 h2{
@@ -134,7 +135,7 @@ h2{
     text-align: center;
 }
 
-.proj1, .proj1a, .proj2,
+.proj1, .proj2,
 .proj3, .proj4{
     max-width: 100%;
     max-height: 100%;
@@ -146,8 +147,8 @@ h2{
     width: 50%;
 }
 
-.proj1:hover, .proj1a:hover,
-.proj2:hover, .proj3:hover{
+.proj1:hover, .proj2:hover,
+.proj3:hover{
     transform: scale(1.2);
 }
 
@@ -157,138 +158,52 @@ h2{
 /*end of work*/
 
 
-/*CONTACT PART*/
-#cont{
-    height: 40vh;
-    background: #324575;
-    display: inline-block;
-    width: 100%;
-}
-
-#cont h2{
-    font-size: 50px;
-    color: white;
-    margin-bottom: 20px;
-}
-
-#cont a{
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-
-
-#cont ul{
-    display: flex;
-    max-width: 84%;
-    margin: auto;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: space-between;
-}
-/*end of contact*/
-
 /*ABOUT PART*/
 #about{
     height: 100vh;
-    background: #324575;
     display: inline-block;
     width: 100%;
 }
 
-
-#likes{
-    height: 100vh;
-    background: white;
-    display: inline-block;
-    width: 100%;
+.pics1{
+    max-width: 80%;
+    height: 30vh;
+    position: absolute;
+    bottom: 0;
+    left: 100px;
 }
 
-#likes ul a{
-    text-decoration: none;
+.content1{
+    margin-left: 10%;
+    margin-top: 30%;
+    height: 80vh;
 }
 
-#likes ul li{
-    padding: 10px 18px;
-    text-decoration: none;
-    text-align: center;
+
+.content1 h1{
+    font-size: 60px;
     font-weight: bold;
     color: black;
-    display:block;
-    margin: 30px 0;
-    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.content1 p{
+    margin-top: 10%;
+    margin-right: 20%;
+    text-align: right;
     font-size: 20px;
-}
-
-#likes ul li:hover{
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    color: darkorange;
-}
-
-
-#lrn{
-    height: 60vh;
-    background: #324575;
-    display: inline-block;
-    width: 100%;
-}
-
-#lrn ul a{
-    text-decoration: none;
-    font-size: 20px;
-}
-
-#lrn ul li{
-    padding: 10px 18px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    color: black;
-    display:block;
-    margin: 30px 0;
-    border-radius: 5px;
-    font-size: 20px;
-}
-
-#lrn ul li:hover{
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    color: darkorange;
-}
-
-
-#recog{
-    height: 50vh;
-    background: white;
-    display: inline-block;
-    width: 100%;
-}
-
-#recog ul a{
-    text-decoration: none;
-    font-size: 20px;
-}
-
-#recog ul li{
-    padding: 10px 18px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    color: black;
-    display:block;
-    margin: 30px 0;
-    border-radius: 5px;
-    font-size: 20px;
-}
-
-#recog ul li:hover{
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    color: darkorange;
 }
 
 /*end of about*/
+
+/*FOOTER*/
+footer{
+    color: black;
+}
+
+h3{
+    font-size: 60px;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 20px;
+}
