--- a/style.css
+++ b/style.css
@@ -15,34 +15,56 @@ html{
     max-width: 100%;
 }
 .hero {
-    position: relative;
-    max-width: 100%;
-    height: 100vh;
+    /*position: relative;*/
+    /*max-width: 100%;*/
+    /*height: 100vh;*/
+    width: 100%;
+    min-height: 100vh;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 
 .navbar{
-    background: #E6E6E6;
-    position: fixed;
-    display: flex;
-    height: 100px;
+    /*background: #E6E6E6;*/
+    /*position: fixed;*/
+    /*display: flex;*/
+    /*height: 100px;*/
+    /*width: 100%;*/
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
     width: 100%;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .logo{
-    max-width: 100px;
+    /*max-width: 100px;*/
+    /*cursor: pointer;*/
+    /*padding-left: 50px;*/
+    /*padding-top: 30px;*/
+    width: 100px;
     cursor: pointer;
-    padding-left: 50px;
-    padding-top: 30px;
+    margin: 30px 0;
 }
 
+.menu{
+    width: 50px;
+    cursor: pointer;
+    display: none;
+}
+
+nav{
+    flex: 1;
+    text-align: right;
+}
 
 nav ul li {
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin-right: 30px;
 }
 
 nav ul li a{
@@ -135,25 +157,34 @@ h2{
     text-align: center;
 }
 
-.proj1, .proj2,
-.proj3, .proj4{
-    max-width: 100%;
-    max-height: 100%;
+
+.proj1,.proj3{
+    display: block;
+    position: absolute;
     width: 500px;
     height: 400px;
+    left: 65px;
+}
+
+.proj2, .proj4{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    position: absolute;
+    width: 500px;
+    height: 400px;
+    right: 380px;
 }
 
 .proj1:hover, .proj2:hover,
 .proj3:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 #work p{
     text-align: center;
+}
+
+h3{
+
 }
 /*end of work*/
 
@@ -166,11 +197,11 @@ h2{
 }
 
 .pics1{
-    max-width: 80%;
+    max-width: 50%;
     height: 30vh;
     position: absolute;
     bottom: 0;
-    left: 100px;
+    left: 30px;
 }
 
 .content1{
@@ -201,9 +232,61 @@ footer{
     color: black;
 }
 
-h3{
-    font-size: 60px;
-    font-weight: bold;
-    color: black;
-    margin-bottom: 20px;
+h4{
+    font-size: 40px;
+    font-weight: normal;
+}
+
+.foot{
+    position: relative;
+    max-width: 100%;
+    height: 30vh;
+}
+
+.navbar-foot{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar-foot a{
+    font-size: 70px;
+}
+
+.navbar-foot img{
+    width: 50px;
+    height: 50px;
+}
+
+/*End of Footer*/
+
+/*START OF RESPONSIVE SITE*/
+@media only screen and (max-width: 700px) {
+
+    nav ul{
+        width: 100%;
+        background: gray;
+        position: absolute;
+        top: 75px;
+        right: 0;
+        z-index: 2;
+    }
+
+    nav ul li{
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .menu{
+        display: block;
+    }
+
+    #menuList{
+        overflow: hidden;
+        transition: 0.5s;
+    }
+
+
+
 }
