--- a/style.css
+++ b/style.css
@@ -262,13 +262,13 @@ h4{
 /*End of Footer*/
 
 /*START OF RESPONSIVE SITE*/
-@media(max-width: 700px) {
+@media only screen and (max-width: 700px) {
 
     nav ul{
         width: 100%;
-        background: gray;
+        background: linear-gradient(#E6E6E6,gray);
         position: absolute;
-        top: 75px;
+        top: 80px;
         right: 0;
         z-index: 2;
     }
@@ -279,8 +279,14 @@ h4{
         margin-bottom: 10px;
     }
 
+    nav ul li a{
+        color: white;
+    }
+
     .menu{
         display: block;
+        width: 25px;
+        cursor: pointer;
     }
 
     #menuList{
@@ -294,6 +300,18 @@ h4{
         color: black;
         margin-bottom: 20px;
     }
+
+    .logo{
+        /*max-width: 100px;*/
+        /*cursor: pointer;*/
+        /*padding-left: 50px;*/
+        /*padding-top: 30px;*/
+        width: 50px;
+        cursor: pointer;
+        margin: 30px 0;
+    }
+
+
 
 
 
